# tech-europe-hackathon

./: .gitignore  DEMO_SCRIPT.md  Makefile  Makefile.common  README.md  ports.yaml  shared-versions.yml
hybrid-knowledge-system/: .env.example  Hackathon Example 2.md  Makefile  README.md  demo.html  demo_api.py  docker-compose.yml  live_demo.html  load_wellnessroberts_data.py  pyproject.toml  quick_demo.py  requirements.txt  simple_init.py  test_connections.py  wellnessroberts_demo_queries.py
hybrid-knowledge-system/examples/: quick_start.py
hybrid-knowledge-system/examples/sample_data/: customer_retention_best_practices.txt  digital_transformation_roadmap.txt  q4_2024_market_trends_analysis.txt  technology_roi_analysis_2024.txt
hybrid-knowledge-system/examples/wellnessroberts_data/: daily_priorities.txt
hybrid-knowledge-system/scripts/: init_system.py  load_sample_data.py  test_system.py
hybrid-knowledge-system/src/clients/: neo4j_client.py  weaviate_client.py
hybrid-knowledge-system/src/ingestion/: pipeline.py
hybrid-knowledge-system/src/orchestrator/: hybrid_search.py
hybrid-knowledge-system/src/utils/: cache.py  embeddings.py  logger.py
living-twin-synthetic-data/: .env.example  .gitignore  DATASET_COMPARISON_AND_INTEGRATION.md  Dockerfile  Hackathon_Example_1.md  INDUSTRIAL_DATA_SUMMARY.md  Makefile  README.md  demo.html  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scrape_real_strategic_docs.py  test_unified_personas.py
living-twin-synthetic-data/animation-data/: beyond_presence_integration.py  generate_animations.py
living-twin-synthetic-data/id_registry/: avatar_ids.json  generation_history.json  message_ids.json  organization_ids.json  persona_ids.json  voice_ids.json
living-twin-synthetic-data/industrial-data-archive/: README.md
living-twin-synthetic-data/industrial-data-archive/documentation/: data_dictionary.md  methodology.md  quality_assurance.md
living-twin-synthetic-data/scripts/: README.md  data_management_system.py  enhance_data_structure.py  enhanced_communication_flows.py  enhanced_strategic_generator.py  fill_implementation_gaps.py  generate_strategic_documents.py  generate_structured_data.py  intent_based_communication.py  merge_datasets.py  quick_structured_data.py  reserve_id_ranges.py  test_enhanced_doc.py  unified_persona_pipeline.py
living-twin-synthetic-data/server/: main.py
living-twin-synthetic-data/shared/: persona_system.py
living-twin-synthetic-data/shared/validators/: validate_all.py
living-twin-synthetic-data/synthetic-data/: ai_generator.py  config.yaml  config_ai.yaml  enhanced_config.yaml  enhanced_generate.py  generate.py  generate_ai.py  industrial_company_generator.py  requirements_scraping.txt
living-twin-synthetic-data/synthetic-data/industrial-data-archive/datasets/: industrial_companies.csv  industrial_companies.json  industrial_companies_analytics.json  industrial_companies_summary.json
living-twin-synthetic-data/synthetic-data/industrial-data-archive/generators/: industrial_data_scraper.py  run_industrial_data_generation.py
living-twin-synthetic-data/synthetic-data/industrial-data-archive/integration/: industrial_integration_examples.json  integration_summary.json
living-twin-synthetic-data/voice-generation/: enhanced_voice_generator.py  generate_voices.py
local-model-fine-tuning/: Dockerfile  Makefile  backend_service.py  demo.html  demo_real.html  docker-compose.yml  healthcare_industry_context.txt  pyproject.toml  qwen_lora_trainer.py  simple_demo_api.py  test_demo.sh
local-model-fine-tuning/backend/: pyproject.toml
local-model-fine-tuning/backend/app/routers/: fine_tuning.py
local-model-fine-tuning/frontend/src/components/: ErrorBoundary.tsx  FineTuningExperiment.tsx  LoadingSpinner.tsx
local-model-fine-tuning/frontend/src/services/: api.ts
local-model-fine-tuning/server/: main.py
openai-voice/: Makefile  (+6 more)
(+44 files in other folders)
