[project]
name = "org-ai-fine-tuning"
version = "1.0.0"
description = "Organizational AI Fine-Tuning Hackathon Demo"
requires-python = ">=3.11"

dependencies = [
    # Standardized versions (see ../shared-versions.yml)
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "pydantic==2.8.0",
    "python-multipart==0.0.9",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.1",
    "openai==1.12.0",
    "transformers==4.38.2",
    "torch>=2.2.1",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "tqdm==4.66.2",
    "rich==13.7.1",
    "typer==0.9.0",
    "click==8.1.7"
]
