[project]
name = "org-ai-fine-tuning"
version = "1.0.0"
description = "Organizational AI Fine-Tuning Hackathon Demo"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.1",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.1"
]
